--- a/WpfApp1/WpfApp1.csproj
+++ b/WpfApp1/WpfApp1.csproj
@@ -108,6 +108,9 @@
     <PackageReference Include="ControlzEx">
       <Version>4.4.0</Version>
     </PackageReference>
+    <PackageReference Include="FluentWPF">
+      <Version>0.9.0</Version>
+    </PackageReference>
     <PackageReference Include="MahApps.Metro">
       <Version>2.4.3</Version>
     </PackageReference>
