--- a/NativeWorker/NativeWorker.csproj
+++ b/NativeWorker/NativeWorker.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="7.0.0-preview.1.22076.8" />
+  </ItemGroup>
+
 </Project>
