--- a/AvaloniaApplication1/DesktopTiles.csproj
+++ b/AvaloniaApplication1/DesktopTiles.csproj
@@ -35,4 +35,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </AvaloniaXaml>
   </ItemGroup>
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Styles\MetroStyle.axaml" />
+  </ItemGroup>
 </Project>
